publications fix + white band of extra space on iphones

--- a/css/publications.css
+++ b/css/publications.css
@@ -108,7 +108,7 @@
     }
 
     .publications-detail {
-        width: 350px;
+        width: auto !important;
     }
 
     .publications-card-one,
@@ -128,5 +128,13 @@
 
     .publications-card-link {
         padding-top: 0;
+    }
+}
+
+@media screen and (max-width: 340px) {
+    .publications-card-one-detail {
+        padding: 0 5%;
+        justify-content: center;
+        width: auto;
     }
 }
